src/test/deca/context/valid/ContextSansObjet/OperationsUnaires/UMfloat.deca
//Description
//  Test de unaryMinus sur des float
//
//Résultat
//  ok

{
    float x = 1;
    float y = 2;
    
    x= -x;
    y=-y;
    x=-(x+y*(-x)/(-y+x+y*(-x)/(-2.0)));
}